--- a/IDriveMobile/capacitor.config.json
+++ b/IDriveMobile/capacitor.config.json
@@ -2,5 +2,10 @@
 	"appId": "io.ionic.starter",
 	"appName": "iDrive-mobile",
 	"webDir": "dist",
-	"bundledWebRuntime": false
+	"bundledWebRuntime": false,
+	"server": {
+		"allowNavigation": [
+		  "localhost:3000"
+		]
+	  }
 }
